force-app/main/default/objects/InboundLead__e/InboundLead__e.object-meta.xml
<CustomObject>
    <label>InboundLead</label>
    <pluralLabel>InboundLeads</pluralLabel>
</CustomObject>