force-app/main/default/objects/InboundLead__e/fields/Lead_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_First_Name__c</fullName>
    <label>Lead First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>