force-app/main/default/objects/InboundLead__e/fields/Lead_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Name__c</fullName>
    <label>Lead Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>