force-app/main/default/objects/InboundLead__e/fields/Lead_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Phone__c</fullName>
    <label>Lead Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>